Fixed header being too short when no priority navigation links available

--- a/app/assets/stylesheets/koi/components/_header.scss
+++ b/app/assets/stylesheets/koi/components/_header.scss
@@ -52,6 +52,7 @@
   padding-left: $xxx-small-unit;
   @include font($bold-font);
   font-size: 18px;
+  line-height: 44px;
   @include color-link($white, $white);
   @include decorate-link(none, none);
 }
